<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/Dmercancia"
        android:textColor="#000000"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/registrar_corte"
        android:layout_marginTop="5dp"
        android:textSize="30sp" />

    <LinearLayout
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/TxtRetiro"
            android:layout_width="35dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="18sp"
            android:text="@string/retiro" />

        <EditText
            android:id="@+id/EdtRetiro"
            android:gravity="end"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="18sp"
            android:text="" />

    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/TxtCaja"
            android:layout_width="35dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="18sp"
            android:text="@string/dinero_en_caja1" />

        <EditText
            android:id="@+id/EdtCaja"
            android:gravity="end"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="18sp"
            android:text="" />

    </LinearLayout>

    <Button
        android:layout_marginTop="20dp"
        android:textColor="#FFFF"
        android:layout_marginRight="22dp"
        android:layout_marginLeft="22dp"
        android:id="@+id/BtnCorte"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/corte" />

</LinearLayout>