<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="#FFCC33"
    android:orientation="vertical"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/TxtSolicitud"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="25dp"
        android:text="@string/solicitud_de_c_digo"
        android:textSize="25sp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="141dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/TxtIdOrden"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/id_de_orden"
                android:layout_marginStart="15sp"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/EdtIdOrden"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/ingrese_id_de_orgen_a_cancelar"
                android:layout_marginStart="15sp"
                android:textSize="14sp" />
        </LinearLayout>

        <Button
            android:id="@+id/btnCodigo"
            android:layout_width="wrap_content"
            android:layout_height="43dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="55dp"
            android:layout_marginLeft="100dp"
            android:layout_marginTop="64dp"
            android:layout_marginEnd="71dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="34dp"
            android:textColor="#FFFF"
            android:text="Solicitar código" />

    </RelativeLayout>
</LinearLayout>